# StockIQ

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_dev.py  setup_python.bat  test_real_ai.py
.bmad-core/: install-manifest.yaml
.bmad-core/data/: dcfversusfcf  gpt5-agent-prompting-guide.txt  gpt5-correct-usage-guide.md  gpt5-tool-calling-guide.txt  gpt5-valuation-agent-learnings.txt  institutional-research-methods.txt  investor4.1example.txt
.claude/: settings.local.json
.claude/hooks/: annoy.ps1  notify.ps1
config/: settings.py
config/agent_prompts/: valuation_expert.txt
docs/: architecture.md  brief.md  prd.md
docs/architecture/: api-specification.md  backend-architecture.md  chunked-report-generation-architecture.md  coding-standards.md  comments-from-other-agents.md  components.md  core-workflows.md  cross-references-and-integration.md  data-models.md  error-handling-strategy.md  executive-summary.md  external-apis.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  key-assumptions.md  monitoring-and-observability.md  pandoc-integration-architecture.md  performance-optimization.md  research-database-schema.md  security-and-performance.md  source-tree.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/prd/: epic-1-foundation-core-assessment-system.md  epic-2-research-agent-implementation.md  epic-3-report-generation-pdf-output.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  (+2 more)
src/: __init__.py  main.py
static/: index.html
(+57 files in other folders)
